[package]
name = "rust-vosp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-sessions = "0.5.0"
clap = { version = "4.3.10", features = ["derive"] }
figment = { version = "0.10.10", features = ["env", "json", "toml"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.19"
postgres = "0.19.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.100"
simple_logger = { version = "4.2.0", features = ["threads"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["full"] }
