[package]
name = "rs-vosp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
figment = { version = "0.10.10", features = ["env", "json", "toml"] }
lazy_static = "1.4.0"
log = "0.4.19"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.100"
simple_logger = { version = "4.2.0", features = ["threads"] }
tokio = { version = "1.26.0", features = ["full"] }
